--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,11 @@
   "author": "Shushlyakov Nikita",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.9"
   }
 }
