--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Shushlyakov Nikita",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
