--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
     "vue": "^3.5.11",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
